tests/typing/fail/class_method_fail.rb

class A
  def A.f() end
end

A.g
